--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ Click==7.0
 cymem==2.0.2
 cytoolz==0.9.0.1
 dill==0.2.9
-en-core-web-sm==2.0.0
+spacy>=2.0.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz#en_core_web_sm
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-HTTPAuth==3.2.4
